skaffold-deployment.yaml
##################################################################################################
# dpass-upload service
##################################################################################################
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dev-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dpass-upload
spec:
  hosts:
  - "*"
  gateways:
  - dev-gateway
  http:
  - match:
    - uri:
        exact: /upload
    - uri:
        exact: /loginJSON
    - uri:
        exact: /loginXML
    - uri:
        exact: /loginForm
    route:
    - destination:
        host: dpass-upload
        port:
          number: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: dpass-upload
  labels:
    app: dpass-upload
    service: dpass-upload
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: dpass-upload
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpass-upload
  labels:
    app: dpass-upload
    version: v0.1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dpass-upload
      version: v0.1.0
  template:
    metadata:
      labels:
        app: dpass-upload
        version: v0.1.0
    spec:
      serviceAccountName: dev-dpass-upload
      containers:
      - name: dpass-upload
        image: dpass-upload
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
---
